<resources>
    <string name="app_name">More Meal</string>
    <string name="safe_boy_image">Safe boy delivering packages</string>
    <string name="regi_first_name">First Name</string>
    <string name="regi_last_name">Last Name</string>
    <string name="regi_address">Address</string>
    <string name="regi_email">Email</string>
    <string name="regi_password">Password</string>
    <string name="regi_register">Register</string>
    <string name="regi_text">text</string>
    <string name="frontText">Safe Delivery to your doorstep !</string>
    <string name="statysafe">Stay Safe ! Stay Happy !</string>
    <string name="logintext">Login</string>
    <string name="LOGIN">LOGIN</string>
    <string name="forgetpasswordText">Forget Your Password</string>
    <string name="orloginwithText">or Login with</string>
    <string name="donthaveaccountText">don\'t have an Account ?</string>
    <string name="web_client_id">590096989071-u8g6m7mfpgt08hnitefpeoa759en0ht9.apps.googleusercontent.com </string>



</resources>